--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^9.9.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^4.9.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "universal-cookie": "^4.0.4",
