--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
     "firebase-functions": "^3.22.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-currency-format": "^1.1.0",
